--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">FloatingPoint</a>
+        <a class="navbar-brand" href="http://localhost:3000/site/home">FloatingPoint</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" >
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Press Kit</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="http://localhost:3000/site/team#">Team</a></li>
+          <li><a href="http://localhost:3000/site/presskit#">Press Kit</a></li>
+          <li><a href="http://localhost:3000/site/blog#">Blog</a></li>
+          <li><a href="http://localhost:3000/site/contact#">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -35,7 +35,7 @@
   <%= yield %>
   <div class="container">
     <div class="row">
-      <p style="text-align: center;">This is the footer!</p>
+      <p style="text-align: center;``">This is the footer!</p>
     </div>
   </div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
