--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,31 @@
   <title>FloatingpointWebsite</title>
   <%= csrf_meta_tags %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Bad+Script|Chelsea+Market|Enriqueta:400,700|Indie+Flower" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Enriqueta', serif;
+    }
+
+    .navbar {
+      background-color: #138875;
+      border: none;
+      padding: 10px 0;
+      margin: 0;
+    }
+
+    .navbar.navbar-default li a, .navbar.navbar-default a {
+      color: #b9e3c9;
+      font-size: 18px;
+    }
+
+    .navbar .navbar-header .navbar-brand {
+      font-size: 22px;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -19,7 +41,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://localhost:3000/site/home">FloatingPoint</a>
+        <a class="navbar-brand" href="http://localhost:3000/site/home">Cloud City VR</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
