--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <iframe width="100%" height="1000" src="https://www.youtube.com/embed/XFBpKRfyup4?autoplay=1" frameborder="0" allowfullscreen></iframe>
+    <iframe width="100%" height="1000" src="https://www.youtube.com/embed/XFBpKRfyup4" frameborder="0" allowfullscreen></iframe>
   </div>
 </div>
 <div class="container">
