--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,6 +1,8 @@
 <div class="container-fluid">
   <div class="row">
-    <iframe width="100%" height="1000" src="https://www.youtube.com/embed/XFBpKRfyup4" frameborder="0" allowfullscreen></iframe>
+    <div class="videoWrapper">
+      <iframe src="http://youtube.com/embed/XFBpKRfyup4?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
+    </div>
   </div>
 </div>
 <div class="container">
