--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,27 @@
     	height: 100%;
     }
 
+    .description {
+      background: #3A7C85;
+      color: #fff;
+      font-size: 18px;
+      padding: 50px 0;
+    }
+
+    .description p, .description ul {
+      text-align: center;
+    }
+
+    .description h2 {
+      margin-top: 0;
+      margin-bottom: 40px;
+      width: 385px;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+      border-bottom: 3px solid #fff;
+      padding-bottom: 16px;
+    }
   </style>
 </head>
 <body>
