--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -5,16 +5,19 @@
     </div>
   </div>
 </div>
-<div class="container">
-  <div class="row" style="text-align: center;">
-    <h2>Description</h2>
-    <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
-    <p>You’ll start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers and building industrial and commercial space. You need to get the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
-    <p><strong>Features</strong></p>
-      <ul>
-        <li>Walk around your city in first person</li>
-        <li>Smart road drawing and deleting</li>
-        <li>Algorithms for driving your economy and population growth</li>
-      </ul>
+<div class="container-fluid description">
+  <div class="container">
+    <div class="row">
+      <h2>An Amazing VR City Builder</h2>
+      <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
+      <p>You’ll start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers and building industrial and commercial space. You need to get the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
+      <br>
+      <p><strong>Features</strong></p>
+        <ul>
+          <li>Walk around your city in first person</li>
+          <li>Smart road drawing and deleting</li>
+          <li>Algorithms for driving your economy and population growth</li>
+        </ul>
+    </div>
   </div>
 </div>
