--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,23 +1,83 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="videoWrapper">
-      <iframe src="http://youtube.com/embed/XFBpKRfyup4?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
-    </div>
+<div class="row">
+  <div class="videoWrapper">
+    <iframe src="http://youtube.com/embed/XFBpKRfyup4?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
   </div>
+</div>
 </div>
 <div class="container-fluid description">
+<div class="container">
+  <div class="row">
+    <h2>An Amazing VR City Builder</h2>
+    <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
+    <p>You’ll start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers and building industrial and commercial space. You need to get the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
+    <br>
+    <p><strong>Features</strong></p>
+    <ul>
+      <li>Walk around your city in first person</li>
+      <li>Smart road drawing and deleting</li>
+      <li>Algorithms for driving your economy and population growth</li>
+    </ul>
+  </div>
+</div>
+</div>
+<div class="container-fluid opt-in">
   <div class="container">
     <div class="row">
-      <h2>An Amazing VR City Builder</h2>
+      <h2>Sign-Up & Be The First To Try!</h2>
       <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
-      <p>You’ll start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers and building industrial and commercial space. You need to get the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
       <br>
-      <p><strong>Features</strong></p>
-        <ul>
-          <li>Walk around your city in first person</li>
-          <li>Smart road drawing and deleting</li>
-          <li>Algorithms for driving your economy and population growth</li>
-        </ul>
+      <form method="post" class="af-form-wrapper" accept-charset="UTF-8" action="https://www.aweber.com/scripts/addlead.pl">
+        <div style="display: none;">
+          <input type="hidden" name="meta_web_form_id" value="525645474" />
+          <input type="hidden" name="meta_split_id" value="" />
+          <input type="hidden" name="listname" value="awlist4146490" />
+          <input type="hidden" name="redirect" value="https://www.aweber.com/thankyou.htm?m=default" id="redirect_18bd58cd3a3fcae898001bbe4c79a61b" />
+
+          <input type="hidden" name="meta_adtracking" value="My_Web_Form" />
+          <input type="hidden" name="meta_message" value="1" />
+          <input type="hidden" name="meta_required" value="email" />
+
+          <input type="hidden" name="meta_tooltip" value="" />
+        </div>
+          <div class="form-group">
+            <div class="af-textWrap"><input class="form-control" id="awf_field-88812163" type="email" name="email" value="" tabindex="500" onfocus=" if (this.value == '') { this.value = ''; }" onblur="if (this.value == '') { this.value='';} " placeholder="Enter your email" required/>
+            </div><div class="af-clear"></div>
+          </div>
+          <input name="submit" id="af-submit-image-525645474" type="image" class="btn btn-default submit" style="background: none; max-width: 100%;" alt="Submit Form" tabindex="501" />
+          <div style="display: none;"><img src="https://forms.aweber.com/form/displays.htm?id=rEysbCysLOws" alt="" /></div>
+        </form>
     </div>
   </div>
 </div>
+<script type="text/javascript">
+// Special handling for facebook iOS since it cannot open new windows
+(function() {
+if (navigator.userAgent.indexOf('FBIOS') !== -1 || navigator.userAgent.indexOf('Twitter for iPhone') !== -1) {
+  document.getElementById('af-form-525645474').parentElement.removeAttribute('target');
+}
+})();
+</script>
+
+<script type="text/javascript">
+<!--
+(function() {
+var IE = /*@cc_on!@*/false;
+if (!IE) { return; }
+if (document.compatMode && document.compatMode == 'BackCompat') {
+  if (document.getElementById("af-form-525645474")) {
+    document.getElementById("af-form-525645474").className = 'af-form af-quirksMode';
+  }
+  if (document.getElementById("af-body-525645474")) {
+    document.getElementById("af-body-525645474").className = "af-body inline af-quirksMode";
+  }
+  if (document.getElementById("af-header-525645474")) {
+    document.getElementById("af-header-525645474").className = "af-header af-quirksMode";
+  }
+  if (document.getElementById("af-footer-525645474")) {
+    document.getElementById("af-footer-525645474").className = "af-footer af-quirksMode";
+  }
+}
+})();
+-->
+</script>
