--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FloatingpointWebsite</title>
+  <title>Cloud City</title>
   <%= csrf_meta_tags %>
 
   <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
