--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -10,7 +10,7 @@
   <div class="row">
     <h2>An Amazing VR City Builder</h2>
     <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
-    <p>You’ll start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers and building industrial and commercial space. You need to get the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
+    <p>You start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers, and building industrial and commercial space. You need to hit the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
     <br>
     <p><strong>Features</strong></p>
     <ul>
