added comming soon messages to unfinished pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,6 +117,18 @@
       color: #FFF;
     }
 
+    #message {
+      font-size: 100px;
+      color: #138875;
+      height: 200px;
+      width: 400px;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      margin-top: -300px;
+      margin-left: -200px;
+    }
+
   </style>
 </head>
 <body>
