--- a/app/views/site/contact.html.erb
+++ b/app/views/site/contact.html.erb
@@ -1,3 +1,5 @@
-
-<h1>Site#contact</h1>
-<p>Find me in app/views/site/contact.html.erb</p>
+<div class="container">
+  <div class="row">
+      <p id="message">Coming Soon!</p>
+  </div>
+</div>
