--- a/app/views/site/team.html.erb
+++ b/app/views/site/team.html.erb
@@ -1,2 +1,5 @@
-<h1>Site#team</h1>
-<p>Find me in app/views/site/team.html.erb</p>
+<div class="container">
+  <div class="row">
+      <p id="message">Coming Soon!</p>
+  </div>
+</div>
