added coming soon message to blog page

--- a/app/views/site/blog.html.erb
+++ b/app/views/site/blog.html.erb
@@ -1,4 +1,6 @@
 
-
-<h1>Site#blog</h1>
-<p>Find me in app/views/site/blog.html.erb</p>
+<div class="container">
+  <div class="row">
+      <p id="message">Coming Soon!</p>
+  </div>
+</div>
