--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,3 +121,26 @@
  .opt-in .btn-default:active:hover {
    color: #FFF;
  }
+
+ #blog-header {
+   margin-top: 100px;
+ }
+
+ * {
+  margin: 0;
+}
+html, body {
+  height: 100%;
+}
+.page-wrap {
+  min-height: 100%;
+  /* equal to footer height */
+  margin-bottom: -50px;
+}
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.sticky-footer, .page-wrap:after {
+  height: 50px;
+}
