--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,10 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <%= yield %>
-  <div class="container-fluid footer">
+  <div class="page-wrap">
+      <%= yield %>
+  </div>
+  <div class="container-fluid footer sticky-footer">
     <div class="container">
       <div class="row">
         <p style="text-align: center;``">&copy; Cloud City VR 2017</p>
