--- a/app/views/layouts/monologue/blog.html.erb
+++ b/app/views/layouts/monologue/blog.html.erb
@@ -3,7 +3,6 @@
 <head>
   <title>Cloud City</title>
   <%= csrf_meta_tags %>
-
   <%#= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Bad+Script|Chelsea+Market|Enriqueta:400,700|Indie+Flower" rel="stylesheet">
@@ -33,8 +32,13 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
-  <%= yield %>
-  <div class="container-fluid footer">
+  <div class="container page-wrap">
+    <div class="row">
+      <h1 id="blog-header">Blog</h2>
+      <%= yield %>
+    </div>
+  </div>
+  <div class="container-fluid footer sticky-footer">
     <div class="container">
       <div class="row">
         <p style="text-align: center;``">&copy; Cloud City VR 2017</p>
