Update opt-in text

--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -14,9 +14,9 @@
     <br>
     <p><strong>Features</strong></p>
     <ul>
-      <li>Walk around your city in first person</li>
-      <li>Smart road drawing and deleting</li>
-      <li>Algorithms for driving your economy and population growth</li>
+      <li>+ Walk around your city in first person</li>
+      <li>+ Smart road drawing and deleting</li>
+      <li>+ Algorithms for driving your economy and population growth</li>
     </ul>
   </div>
 </div>
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <h2>Sign-Up & Be The First To Try!</h2>
-      <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
+      <p>Enter your email to get the latest news and get access to beta testing opportunities.</p>
       <br>
       <form method="post" class="af-form-wrapper" accept-charset="UTF-8" action="https://www.aweber.com/scripts/addlead.pl">
         <div style="display: none;">
