--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -68,6 +68,10 @@
    padding: 50px 0;
  }
 
+ .description ul {
+   list-style: none;
+ }
+
  .opt-in {
    background-color: #c8fff8;
    color: #1A674F;
@@ -123,24 +127,30 @@
  }
 
  #blog-header {
-   margin-top: 100px;
+   margin-top: 140px;
+    text-align: center;
+    font-size: 42px;
+    margin-bottom: 60px;
+    color: #357bb8;
+    font-weight: bold;
  }
 
- * {
-  margin: 0;
+.blog h1 {
+    font-size: 24px;
 }
+
 html, body {
   height: 100%;
 }
 .page-wrap {
   min-height: 100%;
   /* equal to footer height */
-  margin-bottom: -50px;
+  margin-bottom: -40px;
 }
 .page-wrap:after {
   content: "";
   display: block;
 }
 .sticky-footer, .page-wrap:after {
-  height: 50px;
+  height: 40px;
 }
