--- a/app/views/layouts/monologue/blog.html.erb
+++ b/app/views/layouts/monologue/blog.html.erb
@@ -35,7 +35,19 @@
   <div class="container page-wrap">
     <div class="row">
       <h1 id="blog-header">Blog</h2>
-      <%= yield %>
+      <div class="blog">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8">
+              <%= yield %>
+            </div>
+            <div class="col-md-4">
+              <%= render partial: "layouts/monologue/application/social_icons" %>
+              <%= render 'layouts/monologue/application/sidebar' %>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="container-fluid footer sticky-footer">
