--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -154,3 +154,15 @@ html, body {
 .sticky-footer, .page-wrap:after {
   height: 40px;
 }
+
+#message {
+  font-size: 100px;
+  color: #138875;
+  height: 200px;
+  width: 400px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -300px;
+  margin-left: -200px;
+}
