--- a/app/views/layouts/monologue/blog.html.erb
+++ b/app/views/layouts/monologue/blog.html.erb
@@ -24,10 +24,10 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" >
-          <li><a href="http://localhost:3000/site/team#">Team</a></li>
-          <li><a href="http://localhost:3000/site/presskit#">Press Kit</a></li>
-          <li><a href="http://localhost:3000/site/blog#">Blog</a></li>
-          <li><a href="http://localhost:3000/site/contact#">Contact</a></li>
+          <li><a href="http://localhost:3000/site/team">Team</a></li>
+          <li><a href="http://localhost:3000/site/presskit">Press Kit</a></li>
+          <li><a href="http://localhost:3000/site/blog">Blog</a></li>
+          <li><a href="http://localhost:3000/site/contact">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
