--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,15 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="http://playcloudcity.com">Cloud City VR</a>
+        <a class="navbar-brand" href="http://www.playcloudcity.com">Cloud City VR</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" >
-          <li><a href="http://playcloudcity.com/team">Team</a></li>
-          <li><a href="http://playcloudcity.com/presskit">Press Kit</a></li>
-          <li><a href="http://playcloudcity.com/blog">Blog</a></li>
-          <li><a href="http://playcloudcity.com/contact">Contact</a></li>
+          <li><a href="http://www.playcloudcity.com/team">Team</a></li>
+          <li><a href="http://www.playcloudcity.com/presskit">Press Kit</a></li>
+          <li><a href="http://www.playcloudcity.com/blog">Blog</a></li>
+          <li><a href="http://www.playcloudcity.com/contact">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
