update video demo path on homepage

--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 <div class="row">
   <div class="videoWrapper">
-    <iframe src="http://youtube.com/embed/gGjLP5CCpGc?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
+    <iframe src="http://youtube.com/embed/knOvd7umEOk?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
   </div>
 </div>
 </div>
