--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right" >
-          <li><a href="http://localhost:3000/team">Team</a></li>
+         <!-- <li><a href="http://localhost:3000/team">Team</a></li> -->
           <li><a href="http://localhost:3000/presskit">Press Kit</a></li>
-          <li><a href="http://localhost:3000/blog">Blog</a></li>
+          <!-- <li><a href="http://localhost:3000/blog">Blog</a></li> -->
           <li><a href="http://localhost:3000/contact">Contact</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
