--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -1,5 +1,115 @@
-<div class="container">
-  <div class="row">
-      <p id="message">Coming Soon!</p>
-  </div>
-</div>
+
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+		<title>Cloud City VR</title>
+		<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
+		<link href="style.css" rel="stylesheet" type="text/css">
+	</head>
+
+	<body>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div class="uk-container uk-container-center">
+			<div class="uk-grid">
+				<div id="navigation" class="uk-width-medium-1-4">
+					<!-- <h1 class="nav-header">Cloud City VR</h1> -->
+					<a class="nav-header" href="http://playcloudcity.com">playcloudcity.com</a>
+					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
+						<li><a href="#description">Description</a></li>
+						<li><a href="#history">History</a></li>
+						<li><a href="#trailers">Videos</a></li>
+						<li><a href="#images">Images</a></li>
+						<!-- <li><a href="#logo">Logo &amp; Icon</a></li>						<li><a href="#credits">Team</a></li> -->
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</div>
+				<div id="content" class="uk-width-medium-3-4"><img src="http://imgur.com/7L0y6WU.png" class="header"/>					<div class="uk-grid">
+						<div class="uk-width-medium-2-6">
+							<h2 id="factsheet">Factsheet</h2>
+							<p>
+								<img src="localhost:3000/Screen Shot 2017-02-21 at 19.56.03.png"/>
+
+								<strong>Developer:</strong><br/>
+								<a href="">Cloud City VR</a><br/>
+								Based in London, England
+							</p>
+							<p>
+								<strong>Founding date:</strong><br/>
+								December 16, 2016
+							</p>
+							<p>
+								<strong>Website:</strong><br/>
+								<a href="http://playcloudcity.com">playcloudcity.com</a>
+							</p>
+							<p>
+								<strong>Press / Business contact:</strong><br/>
+								<a href="mailto:tobechanged
+                         company.com">info@playcloudcity.com</a>
+							</p>
+							<p>
+								<strong>Social:</strong><br/><a href="http://twitter.com/cloudcityvr">https://twitter.com/cloudcityvr</a><br/><a href="http://facebook.com/cloudcityvr">facebook.com/cloudcityvr</a><br/></p>
+							<p>
+							<strong>Releases:</strong><br />							</p>
+							<p>							</p>
+				
+						</div>
+						<div class="uk-width-medium-4-6">
+							<h2 id="description">Description</h2>
+							<p>
+        Floating Point Interactive is a small independent games studio building Cloud Vity: A VR City Builder!
+    </p>
+							<h2 id="history">History</h2><strong>Early history</strong>
+<p>The team met at Makers Academy and decided to build a virtual reality city builder together. The team is comprised of James, Ken, Mike, Rachael and Royston. Everyone in the team adopts many different roles with no defined hierarchical structure. Everyone is working towards getting Cloud City Virtual Reality City Builder in the best condition possible for release in Spring 2017.</p><strong>After that</strong>
+<p>Build your city, keep your populace happy and watch your economy thrive in VR!
+
+                You start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers, and building industrial and commercial space. You need to hit the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.
+
+                Features
+
+                + Walk around your city in first person
+                + Smart road drawing and deleting
+                + Algorithms for driving your economy and population growth
+								+ Complete contracts to unlock achievements and new territory
+								+ Execute your plan from your mayor's office
+								+ Make plans on your white board
+								+ Control tax with levers
+
+							</p>
+							<ul>							</ul>
+						</div>
+					</div>
+
+					<hr>
+
+					<h2 id="trailers">Videos</h2><p><strong>Game Play Trailer - February 2017</strong>&nbsp;<a href="http://www.youtube.com/watch?v=knOvd7umEOk">YouTube</a><div class="uk-responsive-width iframe-container">
+		<iframe src="http://www.youtube.com/embed/knOvd7umEOk" frameborder="0" allowfullscreen></iframe>
+</div></p>					<hr>
+
+<h2 id="images">Images</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="http://imgur.com/Wm7Jw3x"><img src="http://imgur.com/Wm7Jw3x.png" alt="http://imgur.com/Wm7Jw3x" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vmNE6zi.png"><img src="http://imgur.com/vmNE6zi.png" alt="http://imgur.com/vmNE6zi.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/CklRCzd"><img src="http://imgur.com/CklRCzd" alt="http://imgur.com/CklRCzd" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/eIpujFS"><img src="http://imgur.com/eIpujFS" alt="http://imgur.com/eIpujFS" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/O8ji86P"><img src="http://imgur.com/O8ji86P" alt="http://imgur.com/O8ji86P" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vuX9I4s"><img src="http://imgur.com/vuX9I4s" alt="http://imgur.com/vuX9I4s" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/WuHJAlE"><img src="http://imgur.com/WuHJAlE" alt="http://imgur.com/WuHJAlE" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/yz0mJHM"><img src="http://imgur.com/yz0mJHM" alt="http://imgur.com/yz0mJHM" /></a></div></div>					<p class="images-text">There are far more images available for Cloud City VR, but these are the ones we felt would be most useful to you. If you have specific requests, please do <a href="#contact">contact us</a>!</p>
+
+<hr>
+
+					<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
+					<br>
+				</div>
+			</div>
+		</div>
+
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		<script type="text/javascript">
+			$( document ).ready(function() {
+				var container = $('.images');
+
+				container.imagesLoaded( function() {
+					container.masonry({
+						itemSelector: '.uk-width-medium-1-2',
+					});
+				});
+			});
+		</script>	</body>
