PNG added to end of all the image sources
PNG added to end of all the image sources

--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -31,8 +31,7 @@
 						<div class="uk-width-medium-2-6">
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
-								<img src="localhost:3000/Screen Shot 2017-02-21 at 19.56.03.png"/>
-
+							
 								<strong>Developer:</strong><br/>
 								<a href="">Cloud City VR</a><br/>
 								Based in London, England
@@ -89,7 +88,7 @@
 		<iframe src="http://www.youtube.com/embed/knOvd7umEOk" frameborder="0" allowfullscreen></iframe>
 </div></p>					<hr>
 
-<h2 id="images">Images</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="http://imgur.com/Wm7Jw3x"><img src="http://imgur.com/Wm7Jw3x.png" alt="http://imgur.com/Wm7Jw3x" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vmNE6zi.png"><img src="http://imgur.com/vmNE6zi.png" alt="http://imgur.com/vmNE6zi.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/CklRCzd"><img src="http://imgur.com/CklRCzd" alt="http://imgur.com/CklRCzd" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/eIpujFS"><img src="http://imgur.com/eIpujFS" alt="http://imgur.com/eIpujFS" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/O8ji86P"><img src="http://imgur.com/O8ji86P" alt="http://imgur.com/O8ji86P" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vuX9I4s"><img src="http://imgur.com/vuX9I4s" alt="http://imgur.com/vuX9I4s" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/WuHJAlE"><img src="http://imgur.com/WuHJAlE" alt="http://imgur.com/WuHJAlE" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/yz0mJHM"><img src="http://imgur.com/yz0mJHM" alt="http://imgur.com/yz0mJHM" /></a></div></div>					<p class="images-text">There are far more images available for Cloud City VR, but these are the ones we felt would be most useful to you. If you have specific requests, please do <a href="#contact">contact us</a>!</p>
+<h2 id="images">Images</h2><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="http://imgur.com/Wm7Jw3x.png"><img src="http://imgur.com/Wm7Jw3x.png" alt="http://imgur.com/Wm7Jw3x.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vmNE6zi.png"><img src="http://imgur.com/vmNE6zi.png" alt="http://imgur.com/vmNE6zi.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/CklRCzd.png"><img src="http://imgur.com/CklRCzd.png" alt="http://imgur.com/CklRCzd.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/eIpujFS.png"><img src="http://imgur.com/eIpujFS.png" alt="http://imgur.com/eIpujFS.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/O8ji86P.png"><img src="http://imgur.com/O8ji86P.png" alt="http://imgur.com/O8ji86P.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/vuX9I4s.png"><img src="http://imgur.com/vuX9I4s.png" alt="http://imgur.com/vuX9I4s.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/WuHJAlE.png"><img src="http://imgur.com/WuHJAlE.png" alt="http://imgur.com/WuHJAlE.png" /></a></div><div class="uk-width-medium-1-2"><a href="http://imgur.com/yz0mJHM.png"><img src="http://imgur.com/yz0mJHM.png" alt="http://imgur.com/yz0mJHM.png" /></a></div></div>					<p class="images-text">There are far more images available for Cloud City VR, but these are the ones we felt would be most useful to you. If you have specific requests, please do <a href="#contact">contact us</a>!</p>
 
 <hr>
 
