Added feature list to press kit
Added feature list to press kit

--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -5,7 +5,7 @@
 
 		<title>Cloud City VR</title>
 		<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
-		<link href="style.css" rel="stylesheet" type="text/css">
+		<!-- <link href="style.css" rel="stylesheet" type="text/css"> -->
 	</head>
 
 	<body>
@@ -31,7 +31,7 @@
 						<div class="uk-width-medium-2-6">
 							<h2 id="factsheet">Factsheet</h2>
 							<p>
-							
+
 								<strong>Developer:</strong><br/>
 								<a href="">Cloud City VR</a><br/>
 								Based in London, England
@@ -54,29 +54,38 @@
 							<p>
 							<strong>Releases:</strong><br />							</p>
 							<p>							</p>
-				
+
 						</div>
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-        Floating Point Interactive is a small independent games studio building Cloud Vity: A VR City Builder!
-    </p>
+        Floating Point Interactive is a small independent games studio building Cloud Vity: A VR City Builder! <br>
+    <!-- </p>
 							<h2 id="history">History</h2><strong>Early history</strong>
-<p>The team met at Makers Academy and decided to build a virtual reality city builder together. The team is comprised of James, Ken, Mike, Rachael and Royston. Everyone in the team adopts many different roles with no defined hierarchical structure. Everyone is working towards getting Cloud City Virtual Reality City Builder in the best condition possible for release in Spring 2017.</p><strong>After that</strong>
-<p>Build your city, keep your populace happy and watch your economy thrive in VR!
+<p>The team met at Makers Academy and decided to build a virtual reality city builder together. The team is comprised of James, Ken, Mike, Rachael and Royston. Everyone in the team adopts many different roles with no defined hierarchical structure. Everyone is working towards getting Cloud City Virtual Reality City Builder in the best condition possible for release in Spring 2017.</p>
 
+
+<strong>After that</strong> -->
+<p>Build your city, keep your populace happy and watch your economy thrive in VR!<br>
+								<br>
                 You start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers, and building industrial and commercial space. You need to hit the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.
-
-                Features
-
-                + Walk around your city in first person
-                + Smart road drawing and deleting
-                + Algorithms for driving your economy and population growth
-								+ Complete contracts to unlock achievements and new territory
-								+ Execute your plan from your mayor's office
-								+ Make plans on your white board
-								+ Control tax with levers
-
+								<br>
+								<br>
+                <strong>Features<br></strong>
+								<br>
+                + Walk around your city in first person <br>
+                + Algorithms smart road drawing and deleting<br>
+                + Options for driving your economy and population growth<br>
+								+ Complete contracts to unlock achievements and new territory<br>
+								+ Execute your plan from your mayor's office<br>
+								+ Make plans on your white board<br>
+								+ Control tax with levers<br>
+								+ Your city moves and breaths with animated path finding transport<br>
+								+ Saving and loading <br>
+								+ Building snapping <br>
+								+ Perilous random events<br>
+								+ Array of diverse low poly models<br>
+								<br>
 							</p>
 							<ul>							</ul>
 						</div>
