--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -46,8 +46,7 @@
 							</p>
 							<p>
 								<strong>Press / Business contact:</strong><br/>
-								<a href="mailto:tobechanged
-                         company.com">info@playcloudcity.com</a>
+								<a href="info@playcloudcity.com">info@playcloudcity.com</a>
 							</p>
 							<p>
 								<strong>Social:</strong><br/><a href="http://twitter.com/cloudcityvr">https://twitter.com/cloudcityvr</a><br/><a href="http://facebook.com/cloudcityvr">facebook.com/cloudcityvr</a><br/></p>
