--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -58,7 +58,7 @@
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-        Floating Point Interactive is a small independent games studio building Cloud Vity: A VR City Builder! <br>
+        Floating Point Interactive is a small independent games studio building Cloud City: A VR City Builder! <br>
     <!-- </p>
 							<h2 id="history">History</h2><strong>Early history</strong>
 <p>The team met at Makers Academy and decided to build a virtual reality city builder together. The team is comprised of James, Ken, Mike, Rachael and Royston. Everyone in the team adopts many different roles with no defined hierarchical structure. Everyone is working towards getting Cloud City Virtual Reality City Builder in the best condition possible for release in Spring 2017.</p>
