Updates video and feature lists on site

--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -58,7 +58,7 @@
 						<div class="uk-width-medium-4-6">
 							<h2 id="description">Description</h2>
 							<p>
-        Floating Point Interactive is a small independent games studio building Cloud City: A VR City Builder! <br>
+        Floating Point Interactive is a small independent games studio hard at work building Cloud City: A VR City Builder! <br>
     <!-- </p>
 							<h2 id="history">History</h2><strong>Early history</strong>
 <p>The team met at Makers Academy and decided to build a virtual reality city builder together. The team is comprised of James, Ken, Mike, Rachael and Royston. Everyone in the team adopts many different roles with no defined hierarchical structure. Everyone is working towards getting Cloud City Virtual Reality City Builder in the best condition possible for release in Spring 2017.</p>
@@ -72,18 +72,14 @@
 								<br>
                 <strong>Features<br></strong>
 								<br>
-                + Walk around your city in first person <br>
-                + Algorithms smart road drawing and deleting<br>
-                + Options for driving your economy and population growth<br>
+								+ Sclupt your environment in virtual reality <br>
+                				+ Explore your city in first person <br>
+								+ Advanced economic model that simulates individual businesses and the interactions between communities <br>
+								+ Sell and create advertisements to earn extra cash<br>
+								+ Intuituve UI for painting roads, adding buildings and interacting with the world <br />
 								+ Complete contracts to unlock achievements and new territory<br>
-								+ Execute your plan from your mayor's office<br>
-								+ Make plans on your white board<br>
-								+ Control tax with levers<br>
-								+ Your city moves and breaths with animated path finding transport<br>
-								+ Saving and loading <br>
-								+ Building snapping <br>
-								+ Perilous random events<br>
-								+ Array of diverse low poly models<br>
+								+ Dynamic day/ night system using physically based rendering for accurate and beautiful visuals <br>
+								+ Create a beautiful city with over 100 unique and inidvidual buildings, props and landscaping.<br>
 								<br>
 							</p>
 							<ul>							</ul>
