--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,8 +1,7 @@
 <div class="container-fluid">
 <div class="row">
   <div class="videoWrapper">
-    <iframe src="http://youtube.com/embed/knOvd7umEOk?autoplay=1&controls=0&fs=1&iv_load_policy=3&rel=0&showinfo=0&showsearch=0" allowfullscreen="" width="560" height="315" frameborder="0"></iframe>
-  </div>
+<iframe width="1920" height="1080" src="https://www.youtube.com/embed/9UIr0AxyZU4?rel=0" frameborder="0" allowfullscreen></iframe>  </div>
 </div>
 </div>
 <div class="container-fluid description">
@@ -10,13 +9,16 @@
   <div class="row">
     <h2>An Amazing VR City Builder</h2>
     <p>Build your city, keep your populace happy and watch your economy thrive in VR!</p>
-    <p>You start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers, and building industrial and commercial space. You need to hit the right balance to keep your city prospering. When one city is stable, you can buy another island linked by bridges in the clouds.</p>
+    <p>You start with a floating island that needs some work. Entice your population to grow by creating jobs and investing in transport, leisure and green space. Maintain your economy by having available workers and consumers, and building industrial and commercial space. You need to hit the right balance to keep your city prospering.</p>
     <br>
     <p><strong>Features</strong></p>
     <ul>
-      <li>+ Walk around your city in first person</li>
-      <li>+ Smart road drawing and deleting</li>
-      <li>+ Algorithms for driving your economy and population growth</li>
+      <li>+ Interact with your city in VR</li>
+      <li>+ Explore your creations in first person mode</li>
+      <li>+ Advanced economy model featuring dynamic industry and population systems</li>
+      <li>+ Create an industrial powerhouse, or technological utopia- the choice is yours</li>
+      <li>+ Dynamic day/ night cycle using PBR</li>
+      <li>+ Advanced economy model featuring dynamic industry and population systems</li>
     </ul>
   </div>
 </div>
@@ -25,7 +27,7 @@
   <div class="container">
     <div class="row">
       <h2>Sign-Up & Be The First To Try!</h2>
-      <p>Enter your email to get the latest news and get access to beta testing opportunities.</p>
+      <p>Enter your email to be the first to hear about developments!</p>
       <br>
       <form method="post" class="af-form-wrapper" accept-charset="UTF-8" action="https://www.aweber.com/scripts/addlead.pl">
         <div style="display: none;">
