--- a/app/views/site/presskit.html.erb
+++ b/app/views/site/presskit.html.erb
@@ -33,7 +33,7 @@
 							<p>
 
 								<strong>Developer:</strong><br/>
-								<a href="">Cloud City VR</a><br/>
+								<a href="">FloatingPoint Interactive</a><br/>
 								Based in London, England
 							</p>
 							<p>
@@ -49,7 +49,7 @@
 								<a href="mailto:info@playcloudcity.com">info@playcloudcity.com</a>
 							</p>
 							<p>
-								<strong>Social:</strong><br/><a href="http://twitter.com/cloudcityvr">https://twitter.com/cloudcityvr</a><br/><a href="http://facebook.com/cloudcityvr">facebook.com/cloudcityvr</a><br/></p>
+								<strong>Follow us on facebook to keep up with development:</strong><br/><a href="http://facebook.com/cloudcityvr">facebook.com/cloudcityvr</a><br/></p>
 							<p>
 							<strong>Releases:</strong><br />							</p>
 							<p>							</p>
