removed video line

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -254,7 +254,8 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-    <div class="video-title text-center">Videos</div>
+    <!-- <div class="video-title text-center">Videos</div> -->
+
   </div>
 
   <hr class="featurette-divider" style="border: 1px solid white;">
